--- a/randomuser/index.html
+++ b/randomuser/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -18,6 +18,8 @@
         <th>Prénom</th>
         <th>Email</th>
         <th>Pays</th>
+        <th>Ville</th>
+        <th>Meteo</th>
         <th>Photo</th>
     </tr>
     </thead>
@@ -25,6 +27,6 @@
     </tbody>
 </table>
 <!-- Appel du script -->
-<script src="index.js"></script>
+<script src="assets/index.js"></script>
 </body>
 </html>
